--- a/css/web.css
+++ b/css/web.css
@@ -8,7 +8,6 @@ h1 {
 	color:#0468bf;
 	margin:0;
 	padding:8px 0 8px;
-	text-shadow: 2px 2px 2px #000;
 	font-size: 32px;
 }
 h2 {
@@ -88,7 +87,10 @@ p {
 	color:#0468bf;
 }
 #ios {
+	color:#f2f2f2;
 	display:none;
+	font-size:16px;
+	padding: 10px;
 }
 /*
 COLOR SCHEME
